# webiq-playground

./: .env.example  .gitignore  LICENSE  README.md  cli.py  client.py  commit_msg.txt  images.py  news.py  pyproject.toml  restructure.ps1  setup.ps1  test_webiq.py  videos.py  web.py
src/webiq_playground/: __init__.py  cli.py  client.py  images.py  news.py  videos.py  web.py
src/webiq_playground/agent/: __init__.py  cli.py  create_agent.py  engine.py  hosted_cli.py  hosted_mcp.py  registry.py  run_agent.py  tools.py
src/webiq_playground/backends/: __init__.py  base.py
src/webiq_playground/backends/mcp/: __init__.py  backend.py  session.py
src/webiq_playground/backends/openapi/: __init__.py  backend.py
src/webiq_playground/backends/sdk/: __init__.py  backend.py  client.py
src/webiq_playground/core/: __init__.py  auth.py  config.py  models.py  params.py  query.py
tests/: test_agent.py  test_agent_tool.py  test_backends.py  test_client.py  test_core.py  test_hosted_mcp.py  test_mcp.py  test_openapi.py  test_params.py  test_sdk.py  test_search.py  test_smoke.py
