[project]
name = "webiq-playground"
version = "0.1.0"
description = "A playground for the Microsoft Web IQ APIs (web, news, videos, images search)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[project.optional-dependencies]
entra = ["msal>=1.37.0"]

[dependency-groups]
dev = ["pytest>=8"]

[project.scripts]
webiq = "webiq_playground.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/webiq_playground"]
