[project]
name = "webiq-playground"
version = "0.2.0"
description = "A multi-backend playground for the Microsoft Web IQ APIs (SDK, MCP, OpenAPI) with a Foundry grounding agent."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "webiq>=0.1.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
entra = ["webiq[entra]>=0.1.0", "azure-identity>=1.12"]
mcp = ["mcp>=1.0"]
agent = [
    "azure-ai-projects>=2.0.0",
    "azure-identity>=1.12",
    "openai>=1.55.0",
]

[dependency-groups]
dev = ["pytest>=8"]

[project.scripts]
webiq = "webiq_playground.cli:main"
webiq-agent = "webiq_playground.agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/webiq_playground"]